hosting on heroku and functionality complete

--- a/blog/templates/blog/logout.html
+++ b/blog/templates/blog/logout.html
@@ -1,6 +1,6 @@
 {% load crispy_forms_tags %}
 
-
+{% load static %}
 
 
 <!doctype html>
@@ -9,6 +9,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" type="image/ico" href="{% static 'blog/icon.png' %}" />
+<title>Logout</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
