--- a/blog/templates/blog/login.html
+++ b/blog/templates/blog/login.html
@@ -1,5 +1,5 @@
 {% load crispy_forms_tags %}
-
+{% load static %}
 
 
 
@@ -9,7 +9,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="icon" type="image/ico" href="{% static 'blog/icon.png' %}" />
+<title>Login</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
