--- a/blog/templates/blog/registration.html
+++ b/blog/templates/blog/registration.html
@@ -8,6 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>NTCSF 2019</title>
+    <link rel="icon" type="image/ico" href="{% static 'blog/icon.png' %}" />
+
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -53,11 +55,12 @@
 
             <ul class="list-unstyled CTAs">
                 <li>
-                    <a href="https://bootstrapious.com/tutorial/files/sidebar.zip" class="download" style="font-size: 18px;" >NTCSF</a>
+                    <a href="#" class="download" style="font-size: 18px; color: rgb(175, 22, 22); margin-bottom: 0;" >NTCSF</a>
                 </li>
                 <li>
-                    <a href="https://bootstrapious.com/p/bootstrap-sidebar" class="article">11-12 October</a>
+                    <a href="#" class="download" style="margin-top: -15px;color: rgb(175, 22, 22);">11-12 October, 2019</a>
                 </li>
+                
             </ul>
         </nav>
 
@@ -75,17 +78,17 @@
                           
                         </div>
                     </nav>
-            <div class="jumbotron jumbotron-fluid" style="width: 80%;   display: block; margin: auto;  background: transparent; " >
-                <div class="container">
-                  <h1 class="display-4" style="text-align: center; color:white;font-size: 35px; font-weight: 400; ">Number Theory, Combinatorics, & Special Functions</h1>
-                  <p class="lead" style="color: white; text-align: center; margin-bottom: 0%; " >Conference in honour of 70th birthday of Prof. A. K. Agarwal
-                    </p>
-                    <p class="lead" style="color: white; text-align: center; font-weight: 400;" >Symposia on Applied Mathematics and Engg. Applications
-                    </p>
-                    
-
-                </div>
-              </div>
+                    <div class="jumbotron jumbotron-fluid" style="width: 80%;   display: block; margin: auto;  background: transparent; " >
+                        <div class="container">
+                          <h1 class="display-4" style="text-align: center; color:white;font-size: 35px; font-weight: 400; ">Number Theory, Combinatorics, & Special Functions</h1>
+                          <p class="lead" style="color: white; text-align: center; margin-bottom: 0%; font-size: 90%; " >Conference in honour of 70th birthday of Prof. A. K. Agarwal
+                            </p>
+                            <p class="lead" style="color: white; text-align: center; font-weight: 400; font-size: 90%;" >Symposia on Applied Mathematics and Engg. Applications
+                            </p>
+                            
+        
+                        </div>
+                      </div>
               <div class="container-fluid" style="background-color: #f7f7f7;   " >
                 <div class="row"  >
 
@@ -93,7 +96,7 @@
                         <div class="card" style="margin-top: -40px; margin-bottom: 70px;  margin-left: 30px; margin-right: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
                             <div class="card-body">
                                     <h5 class="card-title">Registration Fees</h5>
-                                    <ul style="list-style: none;">
+                                    <ul style="list-style: none; margin-left: -40px;">
                                     <li style="font-size: 85%;"> 
                                     Participants (faculty)	:	Rs. 3000
                                     </li>
@@ -114,7 +117,7 @@
                         <div class="card" style="margin-top: -40px; margin-bottom: 55px;  margin-left: 30px; margin-right: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
                             <div class="card-body">
                                     <h5 class="card-title">Bank Details</h5>
-                                    <ul style="list-style: none;">
+                                    <ul style="list-style: none;margin-left: -40px;">
                                     <li style="font-size: 85%;"> 
                                         Name of Beneficiary	:	THAPAR INSTITUTE OF ENGINEERING AND TECHNOLOGY
                                     </li>
@@ -148,12 +151,13 @@ Leela Bhawan, Patiala, Punjab, India.
                                 <div class="card" style=" margin-left: 30px; margin-bottom: 30px; margin-right: 30px; margin-bottom: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
                                     <div class="card-body">
                                             <h5 class="card-title" style="font-size: 70%;"  >CONTACT</h5>
-                                            <p style="font-size: 90%; margin-bottom: 20px; color: rgb(26, 26, 26); font-weight: bold; margin-bottom: 0; " > For further information or queries, contact the local organizers at <span style="color: rgb(255, 123, 0);">ntcsf2019@thapar.edu </span>
+                                            <p style="font-size: 90%;  color: rgb(26, 26, 26); font-weight: bold;" >The registration should be done before September 10, 2019 by filling out the form available here.
+
+                                            </p>
+                                            <p style="font-size: 90%; margin-bottom: 20px; color: rgb(26, 26, 26); font-weight: bold; margin-bottom: 0; " > For further information or queries, contact the local organizers at <span style="color: rgba(165, 25, 25, 0.945);">ntcsf2019@thapar.edu </span>or call at following phone number(s): Dr. Meenakshi Rana (+91 96460 14128)
 
                                              </p>
-                                             <p style="font-size: 90%; margin-bottom: 20px; color: rgb(26, 26, 26); font-weight: bold;" >or call at following phone number(s): Dr. Meenakshi Rana (+91 96460 14128) 
-
-                                             </p>
+                                           
                                              
                                             
                                             
