--- a/blog/templates/blog/talk-schedule.html
+++ b/blog/templates/blog/talk-schedule.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>NTCSF 2019</title>
+    <link rel="icon" type="image/ico" href="{% static 'blog/icon.png' %}" />
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -53,22 +54,26 @@
 
             <ul class="list-unstyled CTAs">
                 <li>
-                    <a href="https://bootstrapious.com/tutorial/files/sidebar.zip" class="download" style="font-size: 18px;" >NTCSF</a>
+                    <a href="#" class="download" style="font-size: 18px; color: rgb(175, 22, 22); margin-bottom: 0;" >NTCSF</a>
                 </li>
                 <li>
-                    <a href="https://bootstrapious.com/p/bootstrap-sidebar" class="article">11-12 October</a>
+                    <a href="#" class="download" style="margin-top: -15px;color: rgb(175, 22, 22);">11-12 October, 2019</a>
                 </li>
+                
+            
+                
+                
                 {% if user.is_authenticated %}
                 <li>
-                        <a href="{% url 'create-Post' %}" class="article">Create Post </a>
+                        <a href="{% url 'create-Post' %}" style = "background-color: rgb(175, 22, 22);" class="article">Create Post </a>
                     </li>
                     <li>
-                            <a href="{% url 'logout' %}" class="article">Logout </a>
+                            <a href="{% url 'logout' %}" style = "background-color: rgb(175, 22, 22);" class="article">Logout </a>
                         </li>
                    
                 {% else %}
                 <li>
-                    <a href="{% url 'login' %}" class="article">Login To Post </a>
+                    <a href="{% url 'login' %}" style = "background-color: rgb(175, 22, 22); border: none; border-radius: 0;" class="btn btn-primary">Login To Post </a>
                 </li>
                 {% endif %}
 
@@ -89,17 +94,17 @@
                           
                         </div>
                     </nav>
-            <div class="jumbotron jumbotron-fluid" style="width: 80%;   display: block; margin: auto;  background: transparent; " >
-                <div class="container">
-                  <h1 class="display-4" style="text-align: center; color:white;font-size: 35px; font-weight: 400; ">Number Theory, Combinatorics, & Special Functions</h1>
-                  <p class="lead" style="color: white; text-align: center; margin-bottom: 0%; " >Conference in honour of 70th birthday of Prof. A. K. Agarwal
-                    </p>
-                    <p class="lead" style="color: white; text-align: center; font-weight: 400;" >Symposia on Applied Mathematics and Engg. Applications
-                    </p>
-                    
-
-                </div>
-              </div>
+                    <div class="jumbotron jumbotron-fluid" style="width: 80%;   display: block; margin: auto;  background: transparent; " >
+                        <div class="container">
+                          <h1 class="display-4" style="text-align: center; color:white;font-size: 35px; font-weight: 400; ">Number Theory, Combinatorics, & Special Functions</h1>
+                          <p class="lead" style="color: white; text-align: center; margin-bottom: 0%; font-size: 90%; " >Conference in honour of 70th birthday of Prof. A. K. Agarwal
+                            </p>
+                            <p class="lead" style="color: white; text-align: center; font-weight: 400; font-size: 90%;" >Symposia on Applied Mathematics and Engg. Applications
+                            </p>
+                            
+        
+                        </div>
+                      </div>
               <div class="container-fluid" style="background-color: #f7f7f7;   " >
                 <div class="row"  >
                     {% if  posts %}
@@ -135,12 +140,9 @@
                                 <div class="card" style=" margin-left: 30px; margin-bottom: 30px; margin-top:190px; margin-right: 30px; margin-bottom: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
                                     <div class="card-body">
                                             <h5 class="card-title" style="font-size: 70%;"  >CONTACT</h5>
-                                            <p style="font-size: 90%; margin-bottom: 20px; color: rgb(26, 26, 26); font-weight: bold; margin-bottom: 0; " > For further information or queries, contact the local organizers at <span style="color: rgb(255, 123, 0);">ntcsf2019@thapar.edu </span>
+                                            <p style="font-size: 90%; margin-bottom: 20px; color: rgb(26, 26, 26); font-weight: bold; margin-bottom: 0; " > For further information or queries, contact the local organizers at <span style="color: rgba(165, 25, 25, 0.945);">ntcsf2019@thapar.edu </span>or call at following phone number(s): Dr. Meenakshi Rana (+91 96460 14128)
 
-                                             </p>
-                                             <p style="font-size: 90%; margin-bottom: 20px; color: rgb(26, 26, 26); font-weight: bold;" >or call at following phone number(s): Dr. Meenakshi Rana (+91 96460 14128) 
-
-                                             </p>
+                                            </p>
                                              
                                             
                                             
