--- a/blog/templates/blog/accomodation.html
+++ b/blog/templates/blog/accomodation.html
@@ -87,10 +87,10 @@
                     <div class="jumbotron jumbotron-fluid" style="width: 80%;   display: block; margin: auto;  background: transparent; " >
                         <div class="container">
                           <h1 class="display-4" style="text-align: center; color:white;font-size: 35px; font-weight: 400; ">Number Theory, Combinatorics, & Special Functions</h1>
-                          <p class="lead" style="color: rgb(212, 211, 211); text-align: center; margin-bottom: 0%; font-size: 90%; " >Conference in honour of 70th birthday of Prof. A. K. Agarwal
-                            </p>
-                            <p class="lead" style="color: rgb(212, 211, 211); text-align: center; font-weight: 400; font-size: 95%;" >Symposia on Applied Mathematics and Engg. Applications
-                            </p>
+                          <h2 class="display-4" style="text-align: center; color:white;font-size: 25px; font-weight: 400; ">Symposia on Applied Mathematics and Engg. Applications
+                            </h2>
+                            <p class="lead" style="color: rgb(212, 211, 211); text-align: center; margin-bottom: 0%; font-size: 90%; " >Conference in honour of 70th birthday of Prof. A. K. Agarwal
+                                </p>
                             
         
                         </div>
@@ -99,21 +99,47 @@
                 <div class="row"  >
 
                     <div class="col-sm-12 col-lg-12">
-                        <div class="card" style="margin-top: -40px; margin-bottom: 190px;  margin-left: 30px; margin-right: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
+                        <div class="card" style="margin-top: -40px; margin-bottom: 100px;  margin-left: 30px; margin-right: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
                             <div class="card-body">
-                                    <h5 class="card-title">Accomodation and Travel</h5>
-                                       <p style="font-size: 90%; color: black;" > Details will be updated Soon.      </p>
+                                    <h5 class="card-title">Accomodation</h5>
+                                        {% for acc in ant%}
+                                        <p style="font-size: 90%; color: black;" > {{acc.description}}     </p>
+                                        {% if user.is_authenticated %}
+                                        <a href="{% url 'update-accomodation' acc.id %}" style="background-color: rgb(138, 13, 13); border: none; border-radius:0;" class="btn btn-primary">Edit</a>
+                                        {% endif %}
+                                        {% endfor %}
                             </div>
                           </div>
                     </div>
                     
+                        <div class="row"  >
+        
+                            <div class="col-sm-12 col-lg-12">
+                                <div class="card" style="margin-top: -40px; margin-bottom: 80px;  margin-left: 30px; margin-right: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
+                                    <div class="card-body">
+                                        <h5 class="card-title">Travel</h5>
+                                        <p style="font-size: 90%; color: black; font-weight: 700" >By Rail</p>
+                                        <p style="font-size: 90%; color: black;" >From New Delhi, take New-Delhi Bhatinda Inter City Express to Ambala, and take bus/taxi to reach Patiala.</p>
+                                        <a href="https://www.irctc.co.in/nget/train-search" style="font-size: 90%; color: black; font-weight: 400; text-decoration: underline" >Check out the trains to Patiala.</a>
+                                        <p></p>
+                                        <p style="font-size: 90%; color: black; font-weight: 700" >By Road</p>
+                                        <p style="font-size: 90%; color: black;" >Patiala is about 250 kms from Delhi, a drive around 5 hours. You can drive to Patiala from Chandigarh, via Zirakpur (on NH 7).</p>
+                                        <p style="font-size: 90%; color: black; font-weight: 700" >By Air</p>
+                                        <p style="font-size: 90%; color: black;" >From Patiala, the nearest International Airport is at Delhi. The nearest domestic airport is at Chandigarh, which is around 70km from Patiala. The flight's schedule may be checked online.</p>
+                                    </div>
+                                </div>
+                        </div>
+
                         <div class="col-sm-12 col-lg-12" >
                                 <div class="card" style=" margin-left: 30px; margin-bottom: 30px; margin-right: 30px; margin-bottom: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
                                     <div class="card-body">
                                             <h5 class="card-title" style="font-size: 70%;"  >CONTACT</h5>
-                                            <p style="font-size: 90%; margin-bottom: 20px; color: black; font-weight: bold; margin-bottom: 0; " > For further information or queries, contact the local organizers at <span style="color: rgba(165, 25, 25, 0.945);">ntcsf2019@thapar.edu </span>or call at following phone number(s):<br> Dr. Meenakshi Rana (+91 96460 14128)
+                                            {% for contact in contact %}
+                                            <p style="font-size: 90%;  color: black; font-weight: bold;" >{{contact.description}} <a href = "{{contact.link}}" style="color: rgb(172, 15, 15)" >{{contact.link}}</a>
 
                                             </p>
+                                        
+                                            {% endfor %}
                                              
                                             
                                             
@@ -121,7 +147,7 @@
                                   </div>
                             </div>
                             <div class="col-sm-12 col-lg-12" style="text-align: center;"  >
-                                    <h5 style="margin-bottom: 10px; font-size: 15px; font-weight: lighter;">Developed By: <a style="font-weight: bold; color: rgb(153, 13, 13);" href ="https://akashjindal347.github.io."> Akash Jindal</a> and <span style="font-weight: bold; color: rgb(153, 13, 13);">Siddarth Sharma</span></h5>
+                                    <h5 style="margin-bottom: 10px; font-size: 15px; font-weight: lighter;">Developed By: <a style="font-weight: bold; color: rgb(153, 13, 13);" href ="https://akashjindal347.github.io."> Akash Jindal</a> and <a href="https://www.linkedin.com/in/kajal-goel-656359178/" style="font-weight: bold; color: rgb(153, 13, 13);">Kajal Goel</a></h5>
                                 </div>
 
                 </div>
