--- a/blog/templates/blog/registration.html
+++ b/blog/templates/blog/registration.html
@@ -87,10 +87,10 @@
                     <div class="jumbotron jumbotron-fluid" style="width: 80%;   display: block; margin: auto;  background: transparent; " >
                         <div class="container">
                           <h1 class="display-4" style="text-align: center; color:white;font-size: 35px; font-weight: 400; ">Number Theory, Combinatorics, & Special Functions</h1>
-                          <p class="lead" style="color: rgb(212, 211, 211); text-align: center; margin-bottom: 0%; font-size: 90%; " >Conference in honour of 70th birthday of Prof. A. K. Agarwal
-                            </p>
-                            <p class="lead" style="color: rgb(212, 211, 211); text-align: center; font-weight: 400; font-size: 95%;" >Symposia on Applied Mathematics and Engg. Applications
-                            </p>
+                          <h2 class="display-4" style="text-align: center; color:white;font-size: 25px; font-weight: 400; ">Symposia on Applied Mathematics and Engg. Applications
+                            </h2>
+                            <p class="lead" style="color: rgb(212, 211, 211); text-align: center; margin-bottom: 0%; font-size: 90%; " >Conference in honour of 70th birthday of Prof. A. K. Agarwal
+                                </p>
                             
         
                         </div>
@@ -102,20 +102,31 @@
                         <div class="card" style="margin-top: -40px; margin-bottom: 70px;  margin-left: 30px; margin-right: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
                             <div class="card-body">
                                     <h5 class="card-title">Registration Fees :</h5>
-                                    <ul style="">
+                                    {% if user.is_authenticated %}
+                                        <a href="{% url 'new-fees' %}" style="background-color: rgb(138, 13, 13); border: none; border-radius:0;font-size: 14px; margin-bottom: 10px; margin-top: 5px;" class="btn btn-primary">Add</a>
+                                    {% endif %}
+                                    <ul>
+                                    {% for fee in regis_fee %}
                                     <li style="font-size: 85%;"> 
-                                    Participants (faculty)	:	Rs. 3000
+                                    {{fee.description}}
                                     </li>
-                                    <li style="font-size: 85%;"> 
-                                        Students	:	Rs. 2500
-                                        </li>
-                                        <li style="font-size: 85%;"> 
-                                            Accompanying Person	:	Rs. 1500
-                                            </li>
-                                            <li style="font-size: 85%;"> 
-                                                Foreign Participants	:	$ 200
-                                                </li>
+                                    {% if user.is_authenticated %}
+
+                                        <a href="{% url 'update-fees' fee.id %}" style="background-color: rgb(138, 13, 13); border: none; border-radius:0;font-size: 10px; margin-bottom: 10px; margin-top: 5px;" class="btn btn-primary">Edit</a>
+                                        <a href="{% url 'delete-fees' fee.id %}" style="background-color: rgb(138, 13, 13);  border: none; border-radius:0;font-size: 10px; margin-bottom: 10px; margin-top: 5px;" class="btn btn-primary">Delete</a>
+                                    
+                                    {% endif %}
+                                    {% endfor %}
                                     </ul>
+                                    {% for contact in reg_con %}
+                                        <p style="font-size: 90%;  color: black; font-weight: bold;" >{{contact.description}} <a href = "{{contact.link}}" style="color: rgb(172, 15, 15)" >{{contact.link}}</a>
+
+                                        </p>
+                                        {% if user.is_authenticated %}
+                                        <a href="{% url 'update-reg-contact' contact.id %}" style="background-color: rgb(138, 13, 13); border: none; border-radius:0; margin-bottom: 20px; font-size: 14px" class="btn btn-primary">Edit</a>
+                                        {% endif %}
+                                    {% endfor %}
+
                             </div>
                           </div>
                     </div>
@@ -123,28 +134,21 @@
                         <div class="card" style="margin-top: -40px; margin-bottom: 55px;  margin-left: 30px; margin-right: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
                             <div class="card-body">
                                     <h5 class="card-title">Bank Details :</h5>
-                                    <ul style="">
+                                    {% if user.is_authenticated %}
+                                        <a href="{% url 'new-bank-detail' %}" style="background-color: rgb(138, 13, 13); border: none; border-radius:0;font-size: 14px; margin-bottom: 10px; margin-top: 5px;" class="btn btn-primary">Add</a>
+                                    {% endif %}
+                                    <ul>
+                                    {% for details in bankdetails %}
                                     <li style="font-size: 85%;"> 
-                                        Name of Beneficiary	:	THAPAR INSTITUTE OF ENGINEERING AND TECHNOLOGY
+                                        {{details.description}}
                                     </li>
-                                    <li style="font-size: 85%;"> 
-                                        A/c No	:	676010011622
-                                        </li>
-                                        <li style="font-size: 85%;"> 
-                                            Type of A/c	:	Savings
-                                            </li>
-                                            <li style="font-size: 85%;"> 
-                                                IFSC Code	:	KKBK0000263
-                                                </li>
-                                                <li style="font-size: 85%;"> 
-                                                    Swift Code	:	KKBKINBB
+                                    {% if user.is_authenticated %}
 
-                                                    </li>
-                                                    <li style="font-size: 85%;"> 
-                                                        Bank Name and address : Kotak Mahindra Bank Ltd. 
-Leela Bhawan, Patiala, Punjab, India.
-                                                        </li>
-                                                        
+                                        <a href="{% url 'update-bank-detail' details.id %}" style="background-color: rgb(138, 13, 13); border: none; border-radius:0;font-size: 10px; margin-bottom: 10px; margin-top: 5px;" class="btn btn-primary">Edit</a>
+                                        <a href="{% url 'delete-bank-detail' details.id %}" style="background-color: rgb(138, 13, 13);  border: none; border-radius:0;font-size: 10px; margin-bottom: 10px; margin-top: 5px;" class="btn btn-primary">Delete</a>
+                                    
+                                    {% endif %}
+                                    {% endfor %}
                                     </ul>
                             </div>
                           </div>
@@ -157,12 +161,11 @@ Leela Bhawan, Patiala, Punjab, India.
                                 <div class="card" style=" margin-left: 30px; margin-bottom: 30px; margin-right: 30px; margin-bottom: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
                                     <div class="card-body">
                                             <h5 class="card-title" style="font-size: 70%;"  >CONTACT</h5>
-                                            <p style="font-size: 90%;  color: black; font-weight: bold;" >The registration should be done before September 10, 2019 by filling out the form  <a href = "https://forms.gle/cXG2fe8XrvHHrjAJ7" style="color: rgb(172, 15, 15)" >https://forms.gle/cXG2fe8XrvHHrjAJ7</a>
+                                            {% for contact in contact %}
+                                            <p style="font-size: 90%;  color: black; font-weight: bold;" >{{contact.description}} <a href = "{{contact.link}}" style="color: rgb(172, 15, 15)" >{{contact.link}}</a>
 
                                             </p>
-                                            <p style="font-size: 90%; margin-bottom: 20px; color: black; font-weight: bold; margin-bottom: 0; " > For further information or queries, contact the local organizers at <span style="color: rgba(165, 25, 25, 0.945);">ntcsf2019@thapar.edu </span>or call at following phone number(s):<br> Dr. Meenakshi Rana (+91 96460 14128)
-
-                                             </p>
+                                            {% endfor %}
                                            
                                              
                                             
@@ -171,7 +174,7 @@ Leela Bhawan, Patiala, Punjab, India.
                                   </div>
                             </div>
                             <div class="col-sm-12 col-lg-12" style="text-align: center;"  >
-                                <h5 style="margin-bottom: 10px; font-size: 15px; font-weight: lighter;">Developed By: <a style="font-weight: bold; color: rgb(153, 13, 13);" href ="https://akashjindal347.github.io."> Akash Jindal</a> and <span style="font-weight: bold; color: rgb(153, 13, 13);">Siddarth Sharma</span></h5>
+                                <h5 style="margin-bottom: 10px; font-size: 15px; font-weight: lighter;">Developed By: <a style="font-weight: bold; color: rgb(153, 13, 13);" href ="https://akashjindal347.github.io."> Akash Jindal</a> and <a href="https://www.linkedin.com/in/kajal-goel-656359178/" style="font-weight: bold; color: rgb(153, 13, 13);">Kajal Goel</a></h5>
                             </div>
 
                 </div>
