--- a/blog/templates/blog/talk-schedule.html
+++ b/blog/templates/blog/talk-schedule.html
@@ -20,7 +20,15 @@
     <!-- Font Awesome JS -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
-
+    <style>
+    .link{
+        transition: ease-in-out 0.5s;
+    }
+    .link:hover{
+        font-size: 17px;
+        text-decoration: underline;
+    }
+    </style>
 </head>
 
 <body>
@@ -103,10 +111,10 @@
                     <div class="jumbotron jumbotron-fluid" style="width: 80%;   display: block; margin: auto;  background: transparent; " >
                         <div class="container">
                           <h1 class="display-4" style="text-align: center; color:white;font-size: 35px; font-weight: 400; ">Number Theory, Combinatorics, & Special Functions</h1>
-                          <p class="lead" style="color: rgb(212, 211, 211); text-align: center; margin-bottom: 0%; font-size: 90%; " >Conference in honour of 70th birthday of Prof. A. K. Agarwal
-                            </p>
-                            <p class="lead" style="color: rgb(212, 211, 211); text-align: center; font-weight: 400; font-size: 95%;" >Symposia on Applied Mathematics and Engg. Applications
-                            </p>
+                          <h2 class="display-4" style="text-align: center; color:white;font-size: 25px; font-weight: 400; ">Symposia on Applied Mathematics and Engg. Applications
+                            </h2>
+                            <p class="lead" style="color: rgb(212, 211, 211); text-align: center; margin-bottom: 0%; font-size: 90%; " >Conference in honour of 70th birthday of Prof. A. K. Agarwal
+                                </p>
                             
         
                         </div>
@@ -121,7 +129,7 @@
                                         <h5 class="card-title">{{post.name}}</h5>
                                            <p style="font-size: 90%; color: black;" > {{post.description}}      </p>
                                            {% if post.link %}
-                                           <a href="{{post.link}}"  >{{post.link}}</a><br>
+                                           <a href="{{post.link}}" style="color: rgb(138, 13, 13)" class="link" >{{post.link}}</a><br>
                                            {% endif %}
 
                                            {% if user.is_authenticated %}
