--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -139,8 +139,7 @@
                                     {% endif %}
 
                                     {% endfor %}
-                                    <p class="register"> <a href="{% url 'registration' %}">Register Now</a>
-                                        </p>
+                                    
                             </div>
                           </div>
                     </div>
@@ -177,12 +176,14 @@
                                         {% endif %}
                                         {% for an in announce %}
                                         <h5 class="card-title">{{an.title}}</h5>
-                                        <p style="font-size: 80%; color: black; margin-bottom: 0; " >{{an.description}} <span style="font-weight: 500; color: red">{{an.highlighted}}</span></p>
+                                        <p style="font-size: 80%; color: black; margin-bottom: 0; " >{{an.description}} <span style="font-weight: 500; color: red">{{an.highlights}}</span></p>
                                         {% if user.is_authenticated %}
                                            <a href="{% url 'update-announcement' an.id %}" style="background-color: rgb(138, 13, 13); border: none; border-radius:0;font-size: 10px; margin-bottom: 10px; margin-top: 5px;" class="btn btn-primary">Edit</a>
                                            <a href="{% url 'delete-announcement' an.id %}" style="background-color: rgb(138, 13, 13);  border: none; border-radius:0;font-size: 10px; margin-bottom: 10px; margin-top: 5px;" class="btn btn-primary">Delete</a>
                                         {% endif %}
                                         {% endfor %}
+                                        <p class="register"> <a href="{% url 'registration' %}">Register Now</a>
+                                        </p>
 
                                 </div>
                               </div>
