--- a/blog/templates/blog/talk-schedule.html
+++ b/blog/templates/blog/talk-schedule.html
@@ -166,7 +166,7 @@
                                   </div>
                             </div>
                             <div class="col-sm-12 col-lg-12" style="text-align: center;"  >
-                                    <h5 style="margin-bottom: 10px; font-size: 15px; font-weight: lighter;">Developed By: <a style="font-weight: bold; color: rgb(153, 13, 13);" href ="https://akashjindal347.github.io."> Akash Jindal</a> and <span style="font-weight: bold; color: rgb(153, 13, 13);">Siddarth Sharma</span></h5>
+                                    <h5 style="margin-bottom: 10px; font-size: 15px; font-weight: lighter;">Developed By: <a style="font-weight: bold; color: rgb(153, 13, 13);" href ="https://akashjindal347.github.io."> Akash Jindal</a> and <a href="https://www.linkedin.com/in/kajal-goel-656359178/" style="font-weight: bold; color: rgb(153, 13, 13);">Kajal Goel</a></h5>
                                 </div>
 
                 </div>
