--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -29,6 +29,7 @@
         text-align: center; 
         font-weight: 800;
         transition: ease-in-out 0.5s;
+        color: rgb(212, 211, 211);
     }
     .register:hover{
         text-decoration: underline;
