--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -217,7 +217,7 @@
 
                                 <div class="card" style=" margin-left: 30px; margin-bottom: 30px; margin-right: 30px;  border-radius: 5px;  background: transparent; border: 1px solid rgba(163, 163, 163, 0.274); ">
                                         <div class="card-body">
-                                                <h5 class="card-title">Organisers</h5>
+                                                <h5 class="card-title">Organiser Committee</h5>
                                                 {% if user.is_authenticated %}
                                                 <a href="{% url 'new-organiser' %}" style="background-color: rgb(138, 13, 13); border: none; border-radius:0;font-size: 10px; margin-bottom: 10px; margin-top: 5px;" class="btn btn-primary">Add</a>
                                                 {% endif %}
