--- a/blog/templates/blog/conference.html
+++ b/blog/templates/blog/conference.html
@@ -66,6 +66,9 @@
                 <li>
                     <a href="#" class="download" style="margin-top: -15px;color: rgb(175, 22, 22);">11-12 October, 2019</a>
                 </li>
+                <li>
+                    <a href="#" class="download" style="margin-top: -15px;color: rgb(175, 22, 22); font-size: 21px; font-weight: 700">School of Applied Mathematics</a>
+                </li>
                 
             </ul>
         </nav>
