--- a/blog/templates/blog/accomodation.html
+++ b/blog/templates/blog/accomodation.html
@@ -66,6 +66,9 @@
                 <li>
                     <a href="#" class="download" style="margin-top: -15px;color: rgb(175, 22, 22);">11-12 October, 2019</a>
                 </li>
+                <li>
+                    <a href="#" class="download" style="margin-top: -15px;color: rgb(175, 22, 22); font-size: 21px; font-weight: 700">School of Applied Mathematics</a>
+                </li>
                 
             </ul>
         </nav>
@@ -104,6 +107,7 @@
                                     <h5 class="card-title">Accomodation</h5>
                                         {% for acc in ant%}
                                         <p style="font-size: 90%; color: black;" > {{acc.description}}     </p>
+                                        <p style="font-size: 90%; color: rgb(102, 13, 13); font-weight: 700" > {{acc.link}}     </p>
                                         {% if user.is_authenticated %}
                                         <a href="{% url 'update-accomodation' acc.id %}" style="background-color: rgb(138, 13, 13); border: none; border-radius:0;" class="btn btn-primary">Edit</a>
                                         {% endif %}
