--- a/blog/templates/blog/registration.html
+++ b/blog/templates/blog/registration.html
@@ -66,7 +66,9 @@
                 <li>
                     <a href="#" class="download" style="margin-top: -15px;color: rgb(175, 22, 22);">11-12 October, 2019</a>
                 </li>
-                
+                <li>
+                    <a href="#" class="download" style="margin-top: -15px;color: rgb(175, 22, 22); font-size: 21px; font-weight: 700">School of Applied Mathematics</a>
+                </li>
             </ul>
         </nav>
 
@@ -120,6 +122,9 @@
                                     </ul>
                                     {% for contact in reg_con %}
                                         <p style="font-size: 90%;  color: black; font-weight: bold;" >{{contact.description}} <a href = "{{contact.link}}" style="color: rgb(172, 15, 15)" >{{contact.link}}</a>
+
+                                        </p>
+                                        <p style="font-size: 90%;  color: red; font-weight: bold;" >{{contact.highlight}}
 
                                         </p>
                                         {% if user.is_authenticated %}
