--- a/blog/templates/blog/registration.html
+++ b/blog/templates/blog/registration.html
@@ -58,6 +58,7 @@
                                 <a href="{% url 'poster' %}"><i class="fas fa-image"></i> Poster </a>
                             </li>
             </ul>
+            
 
             <ul class="list-unstyled CTAs">
                 <li>
@@ -135,6 +136,7 @@
                             </div>
                           </div>
                     </div>
+                    
                     <div class="col-sm-12 col-lg-6">
                         <div class="card" style="margin-top: -40px; margin-bottom: 55px;  margin-left: 30px; margin-right: 30px;  border-radius: 5px; box-shadow: 0 0 12px rgba(26, 26, 26, 0.089); "   >
                             <div class="card-body">
@@ -159,6 +161,7 @@
                           </div>
                     </div>
                     
+                    
                   
 
                         
@@ -171,9 +174,15 @@
 
                                             </p>
                                             {% endfor %}
+                                            <div class = "row">
+                                            <div class="col-2"></div>
+                                            <div class="col-8">
+                                        </div>
+
                                            
-                                             
+                                            <div class="col-2"></div>
                                             
+                                        </div>
                                             
                                     </div>
                                   </div>
