--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -95,7 +95,7 @@
                     <a href="#" class="download" style="margin-top: -15px;color: rgb(175, 22, 22);">11-12 October, 2019</a>
                 </li>
                 <li>
-                    <a href="#" class="download" style="margin-top: -15px;color: rgb(175, 22, 22); font-size: 21px; font-weight: 700">School of Applied Mathematics</a>
+                    <a href="#" class="download" style="margin-top: -15px;color: rgb(175, 22, 22); font-size: 21px; font-weight: 700">School of Mathematics</a>
                 </li>
                 
             </ul>
@@ -283,7 +283,7 @@
                                              
                                          </ul>
 
-                                         <h5 class="card-title">Convenors</h5>
+                                         <h5 class="card-title">Convenor</h5>
                                                 {% if user.is_authenticated %}
                                                 <a href="{% url 'new-convenor' %}" style="background-color: rgb(138, 13, 13); border: none; border-radius:0;font-size: 10px; margin-bottom: 10px; margin-top: 5px;" class="btn btn-primary">Add</a>
                                                 {% endif %}
