--- a/blog/templates/blog/accomodation.html
+++ b/blog/templates/blog/accomodation.html
@@ -67,7 +67,7 @@
                     <a href="#" class="download" style="margin-top: -15px;color: rgb(175, 22, 22);">11-12 October, 2019</a>
                 </li>
                 <li>
-                    <a href="#" class="download" style="margin-top: -15px;color: rgb(175, 22, 22); font-size: 21px; font-weight: 700">School of Applied Mathematics</a>
+                    <a href="#" class="download" style="margin-top: -15px;color: rgb(175, 22, 22); font-size: 21px; font-weight: 700">School of Mathematics</a>
                 </li>
                 
             </ul>
